--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -9,18 +9,50 @@ ul {
     list-style: none;
     margin-bottom: 0;
     cursor: pointer;
-    // overflow: hidden;
-}
-
-li:nth-child(n+2) {
-    order: -1;
-}
-
-li {
     font-size: 0.9em;
-    transform: translateY(700%);
+    border: 1px solid blue;
+    overflow: hidden;
 }
 
 .egg {
-    transform: translateX(50px);
+    font-size: 0;
+    z-index: 20;
+}
+
+li.item {
+    transform: translateY(700%);
+    font-size: 0;
+    opacity: 0;
+}
+
+.menu:hover li.item {
+    animation-name: menufly;
+    animation-duration: 1s;
+    animation-timing-function: ease-in;
+    animation-fill-mode: forwards;
+}
+
+@keyframes menufly {
+    50% {transform: translateY(350%); font-size: 0.3em; opacity: 0.5}
+    100% {transform: translateY(0); font-size: 0.9em; opacity: 1}
+}
+
+li:nth-child(2) {
+    animation-delay: 0s;
+}
+
+li:nth-child(3) {
+    animation-delay: 0.15s;
+}
+
+li:nth-child(4) {
+    animation-delay: 0.3s;
+}
+
+li:nth-child(5) {
+    animation-delay: 0.45s;
+}
+
+li:nth-child(6) {
+    animation-delay: 0.6s;
 }
