--- a/src/app/main/landing/landing.component.html
+++ b/src/app/main/landing/landing.component.html
@@ -1,7 +1,7 @@
 <div class="la-container">
   <div class="column-filler"></div>
   <div class="column-menu">
-    <app-menu [ngClass]="'bla'"></app-menu>
+    <app-menu [ngClass]="'appmenu'"></app-menu>
   </div>
   <div class="column-booby">
     <app-booby-landing></app-booby-landing>
@@ -25,31 +25,3 @@
   </div>
   <div class="column-filler"></div>
 </div>
-
-<!-- <div class="table">
-  <div class="egg">
-    <app-egg></app-egg>
-  </div>
-  <div class="booby">
-    <div style="text-align:center;">
-      <app-booby-landing></app-booby-landing>
-    </div>
-  </div>
-  <div class="content">
-    <h2 id="hello">Hello...!</h2>
-    <p id="myname">My name is
-      <b>Limor Agam</b>.</p>
-    <p id="iam">I am an experienced software engineer and graphic designer, seaking new horizon in UX and Front End/Web development.</p>
-    <ul>
-      <li id="hire">
-        <a routerLink="/contact" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Hire me?</a>
-      </li>
-      <li id="gettoknow">
-        <a routerLink="/about_me" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Get to know me?</a>
-      </li>
-      <li id="feet">
-        <a routerLink="/feet" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">See my feet?</a>
-      </li>
-    </ul>
-  </div>
-</div> -->
