--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@
     padding: 0;
     font-family: 'Overlock', sans-serif;
     color: #282820;
-    border: solid 1px red;
+    // border: solid 1px red;
 }
 
 body,html{
@@ -14,7 +14,7 @@ body,html{
 }
 
 body {
-    padding-top: 30px;
+    padding-top: 2rem;
 }
 
 a {
