--- a/src/app/main/contact/contact.component.html
+++ b/src/app/main/contact/contact.component.html
@@ -1,42 +1,29 @@
 <div class="la-container">
   <div class="column-filler"></div>
   <div class="column-booby">
-    <div class="squawk"><app-squawk></app-squawk></div>
-    <div class="menu"><app-menu></app-menu></div>
-    <div class="form">
-        <form (ngSubmit)="onSubmit(f)" #f="ngForm">
-            <div class="form-group">
-              <label for="username">Name</label>
-              <input type="text" id="name" class="form-control" ngModel name="name" required>
-            </div>
-            <div class="form-group">
-              <label for="email">Mail</label>
-              <input name="email" type="email" id="email" class="form-control" ngModel required email #email="ngModel">
-            </div>
-            <div class="form-group">
-                <label for="squawk">Squawk to me</label>
-                <textarea name="squawk" rows="3" class="form-control" [(ngModel)]="squawk"></textarea>
-            </div>
-            <button class="btn btn-primary la-button" type="submit" [disabled]="!f.valid">Submit</button>
-          </form>
-          </div>
-  </div>
-  <!-- <div class="column-content">
-    <form (ngSubmit)="onSubmit(f)" #f="ngForm">
-      <div class="form-group">
-        <label for="username">Name</label>
-        <input type="text" id="name" class="form-control" ngModel name="name" required>
-      </div>
-      <div class="form-group">
-        <label for="email">Mail</label>
-        <input name="email" type="email" id="email" class="form-control" ngModel required email #email="ngModel">
-      </div>
-      <div class="form-group">
+    <div class="squawk" [ngStyle]="{'opacity': dim ? 0.3 : 1}">
+      <app-squawk></app-squawk>
+    </div>
+    <div class="menu">
+      <app-menu (aboutSiteVisibilityEvent)="dim = $event" [dimMenu]="dim"></app-menu>
+    </div>
+    <div class="form" [ngStyle]="{'opacity': dim ? 0.3 : 1}">
+      <form (ngSubmit)="onSubmit(f)" #f="ngForm">
+        <div class="form-group">
+          <label for="username">Name</label>
+          <input type="text" id="name" class="form-control" ngModel name="name" required>
+        </div>
+        <div class="form-group">
+          <label for="email">Mail</label>
+          <input name="email" type="email" id="email" class="form-control" ngModel required email #email="ngModel">
+        </div>
+        <div class="form-group">
           <label for="squawk">Squawk to me</label>
           <textarea name="squawk" rows="3" class="form-control" [(ngModel)]="squawk"></textarea>
-      </div>
-      <button class="btn btn-primary" type="submit" [disabled]="!f.valid">Submit</button>
-    </form>
-  </div> -->
+        </div>
+        <button class="btn btn-primary la-button" type="submit" [disabled]="!f.valid">Submit</button>
+      </form>
+    </div>
+  </div>
   <div class="column-filler"></div>
 </div>
