--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,6 +1,33 @@
-<nav class="menu">
-  <ul>
-    <li *ngFor="let menuItem of menuItems" [@itemFlyout]="menuItem.menuItemState"><a [routerLink]="menuItem.routerLink" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">{{menuItem.text}}</a></li>
-    <li class="egg" (mouseenter)="displayMenuItems()"><app-egg></app-egg></li>
+<div id="aboutsite" [ngStyle]="{'opacity': aboutSiteVisibility ? 1 : 0}">
+  <!-- <div class="overlay"></div> -->
+  <div class="popup">
+    <a class="x" href="javascript:void(0)" (click)="onAboutSiteChangeVisibility(false)">&times;</a>
+    <h4>About this site</h4>
+    <ul>
+      <li>Angular 5</li>
+      <li>Inkscape 0.92</li>
+      <li>SnapSVG 0.5.1</li>
+    </ul>
+  </div>
+</div>
+
+<nav class="menu" [ngStyle]="{'opacity': dimMenu ? 0.3 : 1}">
+  <ul class="menu-list" [ngStyle]="{'cursor': dimMenu ? 'default' : 'pointer'}">
+    <li class="menu-item" *ngFor="let menuItem of menuItems" [@itemFlyout]="menuItem.menuItemState">
+      <a 
+        *ngIf="menuItem.routerLink" 
+        [ngStyle]="{'cursor': dimMenu ? 'default' : 'pointer'}"
+        [routerLink]="dimMenu ? null : menuItem.routerLink" 
+        routerLinkActive="active" 
+        [routerLinkActiveOptions]="{exact:true}">{{menuItem.text}}</a>
+      <a 
+        *ngIf="menuItem.href" 
+        [href]="dimMenu ? null : menuItem.href" 
+        [ngStyle]="{'cursor': dimMenu ? 'default' : 'pointer'}"
+        (click)="onAboutSiteChangeVisibility(true)">{{menuItem.text}}</a>
+    </li>
+    <li class="egg" (mouseenter)="displayMenuItems()">
+      <app-egg></app-egg>
+    </li>
   </ul>
 </nav>
