--- a/src/app/main/contact/contact.component.html
+++ b/src/app/main/contact/contact.component.html
@@ -10,16 +10,16 @@
     <div class="form" [ngStyle]="{'opacity': dim ? 0.3 : 1}">
       <form (ngSubmit)="onSubmit(f)" #f="ngForm">
         <div class="form-group">
-          <label for="username">Name</label>
-          <input type="text" id="name" class="form-control" ngModel name="name" required>
+          <label for="name">Name *</label>
+          <input type="text" name="name" id="name" class="form-control" ngModel required>
         </div>
         <div class="form-group">
-          <label for="email">Mail</label>
-          <input name="email" type="email" id="email" class="form-control" ngModel required email #email="ngModel">
+          <label for="email">Mail *</label>
+          <input type="email" name="email" id="email" class="form-control" ngModel required email #email="ngModel">
         </div>
         <div class="form-group">
-          <label for="squawk">Squawk to me</label>
-          <textarea name="squawk" rows="3" class="form-control" [(ngModel)]="squawk"></textarea>
+          <label for="squawk">Squawk to me *</label>
+          <textarea type="text" name="squawk" id="squawk" class="form-control" rows="3" [(ngModel)]="squawk" required></textarea>
         </div>
         <button class="btn btn-primary la-button" type="submit" [disabled]="!f.valid">Submit</button>
       </form>
