Intermediate before moving to grid

--- a/src/app/common/menu/menu.component.html
+++ b/src/app/common/menu/menu.component.html
@@ -1,4 +1,4 @@
-<div id="aboutsite" [ngStyle]="{'opacity': aboutSiteVisibility ? 1 : 0}">
+<!-- <div id="aboutsite" [ngStyle]="{'opacity': aboutSiteVisibility ? 1 : 0}">
   <div class="popup">
     <a class="x" href="javascript:void(0)" (click)="onAboutSiteChangeVisibility(false)">&times;</a>
     <h4>About this site</h4>
@@ -8,7 +8,7 @@
       <li>SnapSVG 0.5.1</li>
     </ul>
   </div>
-</div>
+</div> -->
 
 <nav class="menu" [ngStyle]="{'opacity': dimMenu ? 0.3 : 1}">
   <ul class="menu-list" [ngStyle]="{'cursor': dimMenu ? 'default' : 'pointer'}">
