--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,7 @@ $background-color: #f7f5ea;
     padding: 0;
     font-family: 'Overlock', sans-serif;
     color: $text-color;
-    // border: solid 1px red;
+    border: solid 1px red;
 }
 
 body,html{
