--- a/src/app/common/menu/menu.component.scss
+++ b/src/app/common/menu/menu.component.scss
@@ -1,36 +1,35 @@
-@import "../globalstyles.scss";
+@import "../../globalstyles.scss";
 
 * {
     white-space: nowrap;
 }
 
-#aboutsite {
-    opacity: 0;
-    transition: opacity 300ms ease-in-out;
-}
+// #aboutsite {
+//     opacity: 0;
+//     transition: opacity 300ms ease-in-out;
+// }
 
-.popup {
-    width: 118%;
-    text-align: left;
-    background-color:white;
-    position: relative;
-    padding: 0.6rem 0.5rem 0.1rem 1rem;
-    border: 0.3rem solid $wingcolor;
-    border-radius: 0.5rem;
-    z-index: 24;
-    margin-bottom: 1rem;
-}
+// .popup {
+//     width: 118%;
+//     text-align: left;
+//     background-color:white;
+//     position: relative;
+//     padding: 0.6rem 0.5rem 0.1rem 1rem;
+//     border: 0.3rem solid $wingcolor;
+//     border-radius: 0.5rem;
+//     z-index: 24;
+//     margin-bottom: 1rem;
+// }
 
-.x {
-    position: relative;
-    float: right;
-    top: -0.5rem;
-    font-size: 1.5rem;
-}
+// .x {
+//     position: relative;
+//     float: right;
+//     top: -0.5rem;
+//     font-size: 1.5rem;
+// }
 
 ul .menu-list {
     text-align: center;
-    display: flex;
     flex-direction: column;
     list-style: none;
     margin-bottom: 0;
