--- a/src/app/common/about-site/about-site.component.scss
+++ b/src/app/common/about-site/about-site.component.scss
@@ -2,23 +2,15 @@
 
 * {
     white-space: nowrap;
-}
-
-#aboutsite {
-    opacity: 0;
-    transition: opacity 300ms ease-in-out;
+    // border: solid 1px red;
 }
 
 .popup {
-    width: 118%;
-    text-align: left;
-    background-color:white;
+    background-color:rgba(255, 255, 255, 0.5);
     position: relative;
     padding: 0.6rem 0.5rem 0.1rem 1rem;
     border: 0.3rem solid $wingcolor;
     border-radius: 0.5rem;
-    z-index: 24;
-    margin-bottom: 1rem;
 }
 
 .x {
