--- a/src/app/common/menu/menu.component.html
+++ b/src/app/common/menu/menu.component.html
@@ -1,34 +1,22 @@
-<!-- <div id="aboutsite" [ngStyle]="{'opacity': aboutSiteVisibility ? 1 : 0}">
-  <div class="popup">
-    <a class="x" href="javascript:void(0)" (click)="onAboutSiteChangeVisibility(false)">&times;</a>
-    <h4>About this site</h4>
-    <ul>
-      <li>Angular 5</li>
-      <li>Inkscape 0.92</li>
-      <li>SnapSVG 0.5.1</li>
-    </ul>
-  </div>
-</div> -->
-
-<nav class="menu" [ngStyle]="{'opacity': dimMenu ? 0.3 : 1}">
-  <ul class="menu-list" [ngStyle]="{'cursor': dimMenu ? 'default' : 'pointer'}">
+<nav class="menu">
+  <ul class="menu-list">
     <li class="menu-item" *ngFor="let menuItem of menuItems" [@itemFlyout]="menuItem.menuItemState">
       <!-- if item has an href, use href -->
       <a 
         *ngIf="menuItem.href; else aRouterLink" 
-        [href]="dimMenu ? null : menuItem.href" 
-        [ngStyle]="{'cursor': dimMenu ? 'default' : 'pointer'}"
-        (click)="onAboutSiteChangeVisibility(true)">{{menuItem.text}}</a>
+        [href]="disableMenu ? null : menuItem.href" 
+        [ngStyle]="{'cursor': disableMenu ? 'default' : 'pointer'}"
+        (click)="onAboutSiteOpen()">{{menuItem.text}}</a>
       <!-- otherwise, use routerLink -->
       <ng-template #aRouterLink>
         <a
-        [ngStyle]="{'cursor': dimMenu ? 'default' : 'pointer'}"
-        [routerLink]="dimMenu ? null : menuItem.routerLink" 
+        [ngStyle]="{'cursor': disableMenu ? 'default' : 'pointer'}"
+        [routerLink]="disableMenu ? null : menuItem.routerLink" 
         routerLinkActive="active" 
         [routerLinkActiveOptions]="{exact:true}">{{menuItem.text}}</a>
       </ng-template>
     </li>
-    <li class="egg" (mouseenter)="displayMenuItems()">
+    <li class="egg" (mouseenter)="displayMenuItems()" [ngStyle]="{'cursor': menuItemsVisible ? 'default' : 'pointer'}">
       <app-egg></app-egg>
     </li>
   </ul>
