--- a/src/app/content/contact/contact.component.html
+++ b/src/app/content/contact/contact.component.html
@@ -5,7 +5,7 @@
       <app-squawk></app-squawk>
     </div>
     <div class="menu">
-      <app-menu (aboutSiteVisibilityEvent)="dim = $event" [dimMenu]="dim"></app-menu>
+      <app-menu (aboutSiteVisibilityEvent)="dim = $event" [disableMenu]="dim"></app-menu>
     </div>
     <div class="form" [ngStyle]="{'opacity': dim ? 0.3 : 1}">
       <form (ngSubmit)="onSubmit(f)" #f="ngForm">
