--- a/src/app/layout/landing-layout/landing-layout.component.html
+++ b/src/app/layout/landing-layout/landing-layout.component.html
@@ -1,13 +1,16 @@
 <div class="la-container">
-  <div class="column-filler"></div>
-  <div class="column-menu" [ngStyle]="{'opacity': dim ? 0.3 : 1}">
-    <app-menu (aboutSiteVisibilityEvent)="dim = $event" [ngClass]="'appmenu'" [dimMenu]="dim"></app-menu>
+  <div class="area fillerL"></div>
+  <div class="area about-site" [ngStyle]="{'opacity': dim ? 0.8 : 0}">
+    <app-about-site (aboutSiteHideEvent)="dim=false"></app-about-site>
   </div>
-  <div class="column-booby" [ngStyle]="{'opacity': dim ? 0.3 : 1}">
+  <div class="area menu" [ngStyle]="{'opacity': dim ? 0.3 : 1}">
+    <app-menu (aboutSiteShowEvent)="dim = true" [ngClass]="'appmenu'" [disableMenu]="dim"></app-menu>
+  </div>
+  <div class="area booby" [ngStyle]="{'opacity': dim ? 0.3 : 1}">
     <app-booby-landing></app-booby-landing>
   </div>
-  <div class="column-content" [ngStyle]="{'opacity': dim ? 0.3 : 1}">
+  <div class="area content" [ngStyle]="{'opacity': dim ? 0.3 : 1}">
     <app-landing-content></app-landing-content>
   </div>
-  <div class="column-filler"></div>
+  <div class="area fillerR"></div>
 </div>
