--- a/src/app/layout/layout-contact/layout-contact.component.html
+++ b/src/app/layout/layout-contact/layout-contact.component.html
@@ -10,7 +10,7 @@
     <app-squawk></app-squawk>
   </div>
   <div class="area content" [ngStyle]="{'opacity': dim ? 0.3 : 1}">
-    <app-contact-content></app-contact-content>
+    <app-content-contact></app-content-contact>
   </div>
   <div class="area fillerR"></div>
 </div>
