--- a/src/app/layout/layout-landing/layout-landing.component.html
+++ b/src/app/layout/layout-landing/layout-landing.component.html
@@ -10,7 +10,7 @@
     <app-booby-landing></app-booby-landing>
   </div>
   <div class="area content" [ngStyle]="{'opacity': dim ? 0.3 : 1}">
-    <app-landing-content></app-landing-content>
+    <app-content-landing></app-content-landing>
   </div>
   <div class="area fillerR"></div>
 </div>
