--- a/src/app/content/content-contact/content-contact.component.scss
+++ b/src/app/content/content-contact/content-contact.component.scss
@@ -5,7 +5,7 @@
     position: absolute;
     bottom: 0;
     transition: opacity 300ms ease-in-out;
-    width: 20%; // to fit into 2 columns.
+    width: 20vw; // to fit into 2 columns.
 }
 
 .form-group {
