--- a/src/app/layout/layout-about-me/layout-about-me.component.scss
+++ b/src/app/layout/layout-about-me/layout-about-me.component.scss
@@ -7,10 +7,10 @@
 .la-container {
     display: grid;
     grid-gap: 0.5rem;
-    grid-template-columns: 2fr 1fr 1fr 1fr 1fr 1fr 1fr 2fr;
+    grid-template-columns: 1.5fr 1fr 2fr 4fr 1.5fr;
     grid-template-rows: repeat(2, 1fr);
-    grid-template-areas: "fillerL booby menu about . content content fillerR"
-                         "fillerL booby menu about . content content fillerR";
+    grid-template-areas: "fillerL menu booby content fillerR"
+                         "fillerL menu booby content fillerR";
     position: relative;
 }
 
@@ -22,11 +22,12 @@
     grid-area: menu;
     z-index: 10;
     align-self: end;
-    justify-self: center;
+    justify-self: right;
 }
 
 .about-site {
-    grid-column: booby-start / span 2;
+    grid-column-start: menu-start;
+    grid-column-end: booby-end;
     grid-row: 1;
     z-index: 12;
 }
@@ -37,14 +38,15 @@
 }
 
 .booby {
-    grid-column-start: booby-start;
-    grid-column-end: span 5;
-    grid-row: 1 / span 2;
+    grid-area: booby;
+    align-self: end;
+    justify-self: center;
 }
 
 .content {
     grid-area: content;
-    align-self: start;
+    width: 38vw;
+    overflow: hidden;
 }
 
 .fillerL {
