--- a/src/app/content/content-contact/content-contact.component.html
+++ b/src/app/content/content-contact/content-contact.component.html
@@ -9,7 +9,7 @@
   </div>
   <div class="form-group">
     <label for="squawk">Squawk to me *</label>
-    <textarea type="text" name="squawk" id="squawk" class="form-control" rows="3" [(ngModel)]="squawk" required></textarea>
+    <textarea type="text" name="squawk" id="squawk" class="form-control" rows="3" required></textarea>
   </div>
   <button class="btn btn-primary la-button" type="submit" [disabled]="!f.valid">Submit</button>
 </form>
